--- a/index.css
+++ b/index.css
@@ -50,13 +50,14 @@ table {
 /*========= Global ==========*/
 
 body{ 
-    margin: 0;
+    margin: 0 auto;
+    max-width: 500px; 
     font-size: 1.5rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     line-height: 1.125em;
     color: #fff;
-    font-style: normal;
+    font-style: normal;  
 }
 
 body > * {
@@ -217,3 +218,18 @@ p {
 }
 
 
+/*========= Media Queries =========*/
+
+@media(min-width: 550px){
+    #accept-btn:hover {
+        background-color: #d4f7e4f7;
+    }
+    
+    #reject-btn:hover{
+        background-color: #f7d6d4f2;
+    }
+    .badge {
+        width: 15%;
+        top: 18%;
+    }
+}
